# text-rendering-tests

./: .gitignore  .gitmodules  .travis.yml  LICENSE  LICENSE.md  README.md  check.py  package.json  svgutil.py  svgutil_test.py
reports/: Allsorts.html  CoreText.html  FreeStack.html  OpenType.js.html  Report-20160901-CoreText.html  Report-20160901-FreeStack.html  Swash.html  TehreerStack.html  fake-fail.html  fontkit.html
src/: CMakeLists.txt
src/fonttest/: CMakeLists.txt  avar_test.cpp  avar_test.h  coretext_engine.h  coretext_engine.mm  coretext_font.h  coretext_font.mm  coretext_line.h  coretext_line.mm  coretext_path.h  coretext_path.mm  font.h  font_engine.cpp  font_engine.h  fonttest.gyp  freestack_engine.cpp  freestack_engine.h  freestack_font.cpp  freestack_font.h  freestack_line.cpp  freestack_line.h  freestack_path.cpp  freestack_path.h  fthb_engine.cpp  fthb_engine.h  fthb_font.cpp  fthb_font.h  fthb_path.cpp  fthb_path.h  main.cpp  tehreerstack_engine.cpp  tehreerstack_engine.h  tehreerstack_line.cpp  tehreerstack_line.h  test_case.cpp  test_case.h  test_harness.cpp  test_harness.h
testcases/: AVAR-1.html  CFF-1.html  CFF-2.html  CFF-3.html  CFF2-1.html  CMAP-1.html  CMAP-2.html  CMAP-3.html  CMAP-4.html  CVAR-1.html  CVAR-2.html  GLYF-1.html  GPOS-1.html  GPOS-2.html  GPOS-3.html  GPOS-4.html  GPOS-5.html  GSUB-1.html  GSUB-2.html  GSUB-3.html  GVAR-1.html  GVAR-2.html  GVAR-3.html  GVAR-4.html  GVAR-5.html  GVAR-6.html  GVAR-7.html  GVAR-8.html  GVAR-9.html  HVAR-1.html  HVAR-2.html  KERN-1.html  KERN-2.html  MORX-1.html  MORX-10.html  MORX-11.html  (+60 more)
(+2 files in other folders)
